// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ApiKey entity type.
message ApiKey {
  fixed64 external_measurement_consumer_id = 1;
  fixed64 external_api_key_id = 2;

  // Human-readable nickname for this `ApiKey`. Required.
  string nickname = 3;

  // Optional human-readable description for the intended usage of this
  // `ApiKey`.
  string description = 4;

  // The actual API key for authentication. Output-only.
  fixed64 authentication_key = 5;
}
